<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <ImageView
            android:id="@+id/pokemonInfoIV"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/back"
            android:contentDescription="@string/pokemon_main_picture_description"
            android:padding="4dp"
            android:src="@drawable/pokemon_bulbasaur_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/favouriteIV"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/pokemon_favourite_icon_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_black_heart" />

        <TextView
            android:id="@+id/pokedexIdTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/example_pokedex_id"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/favouriteIV"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/pokemonInfoIV"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pokemonNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/example_pokemon_name"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/favouriteIV"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/pokemonInfoIV"
            app:layout_constraintTop_toBottomOf="@+id/pokedexIdTV" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pokemonInfoIV"
            app:layout_constraintTop_toBottomOf="@+id/pokemonNameTV"
            tools:weightSum="1">

            <ImageView
                android:id="@+id/firstTypeInfoIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:contentDescription="@string/first_pokemon_type_description"
                app:srcCompat="@drawable/type_grass" />

            <ImageView
                android:id="@+id/secondTypeInfoIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:contentDescription="@string/second_pokemon_type_description"
                tools:srcCompat="@drawable/type_poison" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>